# mktd5-rust-banana-island

./: Cargo.toml  README.md  Rocket.toml
src/: ai.rs  lib.rs  main.rs  mediator.rs  model.rs  server.rs
