[package]
name = "mktd-island-player-rust"
version = "0.1.0"
authors = ["Logan Mzz <loganmzz@users.noreply.github.com>"]

[dependencies]
futures = "0.1"
tokio-core = "0.1"
hyper = "0.11"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket_contrib = "0.3.3"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
